# ft_select

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_select  id_rsa.pub
includes/: ft_select.h
includes/core/: data.h  exit.h  ft_select.h  init.h
includes/display/: display.h
includes/signals/: signals.h
includes/utils/: utils.h
libft/: CMakeLists.txt  Makefile  ft_putcharn.c  ft_remove_nth_from_array.c  ft_str_to_tab_sep.c  ft_str_to_tab_sep_helper.c
libft/includes/: libft.h
srcs/: lexer.c  main.c
srcs/core/: exit.c  init.c  input_loop.c  main.c  return_highlighted_words.c
srcs/display/: cl_screen.c  clear_screen_from_text.c  print_words.c  refresh_screen.c
srcs/signals/: signals.c
srcs/utils/: utils.c
