cmake_minimum_required(VERSION 3.6)
project(ft)

set(CMAKE_C_STANDARD 11)
set (CMAKE_C_FLAGS "-Wall -Werror -Wextra")

set(SOURCE_FILES
        ft_add_to_array.c
        ft_arraylen.c
        ft_atoi_base.c
        ft_atoi.c
        ft_atoi_nbase.c
        ft_binlen.c
        ft_bzero.c
        ft_cat.c
        ft_charwlen.c
        ft_free_array.c
        ft_isalnum.c
        ft_isalpha.c
        ft_isascii.c
        ft_isdigit.c
        ft_isprint.c
        ft_itoa_base.c
        ft_itoa_base_l.c
        ft_itoa_base_ll.c
        ft_itoa_base_uint.c
        ft_itoa.c
        ft_memalloc.c
        ft_memccpy.c
        ft_memchr.c
        ft_memcmp.c
        ft_memcpy.c
        ft_memdel.c
        ft_memmove.c
        ft_memset.c
        ft_nblen.c
        ft_nblen_l.c
        ft_nblen_ll.c
        ft_power.c
        ft_print_array.c
        ft_printf
        ft_putchar.c
        ft_putchar_fd.c
        ft_putcharn.c
        ft_putendl.c
        ft_putendl_fd.c
        ft_putnbr.c
        ft_putnbr_fd.c
        ft_putnbr_l.c
        ft_putnbr_ll.c
        ft_putnstr.c
        ft_putnwchar.c
        ft_putnwstr.c
        ft_putstr.c
        ft_putstr_fd.c
        ft_putwchar.c
        ft_remfrom_array.c
        ft_remove_nth_from_array.c
        ft_split_whitespaces.c
        ft_strcat.c
        ft_strchr.c
        ft_strclr.c
        ft_strcmp.c
        ft_strcpy.c
        ft_strdel.c
        ft_strdup.c
        ft_strequ.c
        ft_strisdigit.c
        ft_striter.c
        ft_striteri.c
        ft_strjoin.c
        ft_strjoin_sep.c
        ft_strlcat.c
        ft_strlen.c
        ft_strmap.c
        ft_strmapi.c
        ft_strncat.c
        ft_strncmp.c
        ft_strncpy.c
        ft_strnequ.c
        ft_strnew.c
        ft_strnstr.c
        ft_strrchr.c
        ft_strsplit.c
        ft_strstr.c
        ft_strsub.c
        ft_str_to_tab_sep.c
        ft_str_to_tab_sep_helper.c
        ft_strtrim.c
        ft_strwlen.c
        ft_tabdup.c
        ft_tolower.c
        ft_toupper.c
        get_next_line.c
        ft_printf/srcs/check_flags.c
        ft_printf/srcs/check_precision_max.c
        ft_printf/srcs/check_spaces.c
        ft_printf/srcs/check_width.c
        ft_printf/srcs/color2.c
        ft_printf/srcs/color3.c
        ft_printf/srcs/color.c
        ft_printf/srcs/convert_c.c
        ft_printf/srcs/convert_d.c
        ft_printf/srcs/convert_jzlh.c
        ft_printf/srcs/convert_o.c
        ft_printf/srcs/convert_p.c
        ft_printf/srcs/convert_percent.c
        ft_printf/srcs/convert_r.c
        ft_printf/srcs/convert_s.c
        ft_printf/srcs/convert_u.c
        ft_printf/srcs/convert_x.c
        ft_printf/srcs/ft_printf.c
        ft_printf/srcs/parser.c
        ft_printf/srcs/print_d.c
        ft_printf/srcs/print_o.c
        ft_printf/srcs/print_u.c
        ft_printf/srcs/print_x.c
        ft_printf/srcs/print_xx.c
        ft_printf/srcs/utils.c)

include_directories(includes)

add_library(ft ${SOURCE_FILES})